<?xml version="1.0"?>
<package format="2">
  <name>ros_time_sync_lab</name>
  <version>1.0.0</version>
  <description>ROS topics synchronization lab</description>

  <maintainer email="safin.ramil@it.kfu.ru">Ramil Safin</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roslib</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>

  <export/>

</package>
